--- a/ps2famikb-lib/CMakeLists.txt
+++ b/ps2famikb-lib/CMakeLists.txt
@@ -11,7 +11,5 @@ target_link_libraries(ps2famikb-lib INTERFACE hardware_pio)
 target_sources(ps2famikb-lib INTERFACE
     ${CMAKE_CURRENT_LIST_DIR}/ps2famikb.c
     ${CMAKE_CURRENT_LIST_DIR}/ps2famikb.h
-    ${CMAKE_CURRENT_LIST_DIR}/nesin.pio
-	${CMAKE_CURRENT_LIST_DIR}/kbout.pio)
+    ${CMAKE_CURRENT_LIST_DIR}/nesin.pio)
 pico_generate_pio_header(ps2famikb-lib ${CMAKE_CURRENT_LIST_DIR}/nesin.pio)
-pico_generate_pio_header(ps2famikb-lib ${CMAKE_CURRENT_LIST_DIR}/kbout.pio)
